@@ -2,8 +2,8 @@
 * [[Special:RecentChanges|最近の変更]]
 * [[Special:Search|検索]]
 ----
-* [[Special:Allpages|全記事一覧]]
-* [[Special:Specialpages|特別ページ]]
+* [[Special:AllPages|全記事一覧]]
+* [[Special:SpecialPages|特別ページ]]
 * [[Special:Upload|ファイルをアップロード]]
 ----
 * [http://jamwiki.org/ JAMWiki]
